--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.3",
+    "@angular/cdk": "^12.1.3",
     "@angular/common": "~10.0.3",
     "@angular/compiler": "~10.0.3",
     "@angular/core": "~10.0.3",
     "@angular/forms": "~10.0.3",
+    "@angular/material": "^10.2.6",
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
+    "mat-table-exporter": "^10.2.3",
+    "ng-pick-datetime": "^7.0.0",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^11.0.19",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
